# chatbot

./: .gitignore  Makefile  app.py  base_skill.py  intent.py  pyproject.toml  readme.md  skills.py  train.py  vocal_output.py
skills/general/: browsersearch.py  clear.py  greeting.py  mydate.py  mydatetime.py  myhelp.py  myquit.py  mytime.py
tmp/: spacy-test.py  spacy-test2.py  spacy-test3.py  spacy-test4.py  vocal-test2.py  vocal-test3.py
