[tool.poetry]
name = "sir-bot-a-lot"
version = "0.1.0"
description = ""
authors = ["Stefan Jacobs <stefan.jacobs@deutschebahn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
colorama = "^0.4.4"
pyttsx3 = "^2.90"
spacy = "^3.2.0"
nltk = "3.5"
scikit-learn = ">=0.23.2"
tensorflow = "2.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
